# kraken-samples

hello_cube/: CMakeLists.txt  main.cpp
kraken/macos/kraken.framework/: kraken
kraken/macos/kraken.framework/Versions/0.1.0/: kraken
kraken/macos/kraken.framework/Versions/0.1.0/Resources/: Info.plist
